<resources>
    <string name="app_name">MADShoppingList</string>
    <string name="title_activity_shopping_list">MAD Shopping List</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_clear">Clear</string>


    <string name="button_text_ok">OK</string>
    <string name="button_text_add">"+"</string>
    <string name="button_text_subtract">"-"</string>

    <string name="hint_input_item">Item</string>
    <string name="hint_input_amount">Amount</string>

    <string name="text_total_label">Total</string>
    <string name="text_item_label">Item</string>
    <string name="text_amount_label">Amount</string>
</resources>
