<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/main_layout"
    tools:context="dk.boxed.android.madshoppinglist.ShoppingListActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <FrameLayout
            android:id="@+id/top_fragment_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"></FrameLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp" android:paddingBottom="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/text_item_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:gravity="right"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/text_amount_label" />

            </LinearLayout>

        <FrameLayout
            android:id="@+id/list_fragment_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <fragment
                android:name="dk.boxed.android.madshoppinglist.ShoppingItemFragment"
                android:id="@+id/list_fragment"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />

        </FrameLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_total_label"
        android:id="@+id/textView_total_label"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        style="@style/Base.TextAppearance.AppCompat.Medium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_total_amount"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        style="@style/Base.TextAppearance.AppCompat.Medium" />


</RelativeLayout>
